assets: fix the vertical overflow of the file preview grid
This commit fixes an issue where the file preview grid was overflowing
vertically relative to the drawer containing it.

--- a/assets/src/components/routes/ConnectionActions/ConnectionActions.css
+++ b/assets/src/components/routes/ConnectionActions/ConnectionActions.css
@@ -41,7 +41,7 @@
 	max-width: 1600px;
 }
 
-.connection-actions .grid {
+.connection-actions__grid {
 	margin-top: 10px;
 }
 
